%% ============================================================
%% Modelo de Domínio — Alexandria
%% Referência: docs/blueprint/04-domain-model.md
%% ============================================================

classDiagram
    direction TB

    class Cluster {
        +String cluster_id
        +String name
        +Bytes public_key
        +Bytes encrypted_private_key
        +Status status
        +DateTime created_at
        +criar(seed_phrase) Cluster
        +recuperar(seed_phrase) Cluster
        +convidarMembro(email, role) Invite
    }

    class Member {
        +UUID member_id
        +String name
        +String email
        +Role role
        +UUID invited_by
        +DateTime joined_at
        +aceitarConvite(token) void
        +registrarNo(config) Node
        +uploadArquivo(file) File
    }

    class Node {
        +UUID node_id
        +NodeType type
        +String name
        +Long total_capacity
        +Long used_capacity
        +NodeStatus status
        +String endpoint
        +Bytes config_encrypted
        +DateTime last_heartbeat
        +Tier tier
        +receberHeartbeat() void
        +iniciarDrain() void
        +armazenarChunk(chunk) void
        +servirChunk(chunk_id) Bytes
    }

    class File {
        +UUID file_id
        +String original_name
        +MediaType media_type
        +Long original_size
        +Long optimized_size
        +String content_hash
        +JSON metadata
        +FileStatus status
        +DateTime created_at
        +processar() void
    }

    class Preview {
        +UUID preview_id
        +UUID file_id
        +PreviewType type
        +Long size
        +Format format
        +String content_hash
        +DateTime created_at
    }

    class Manifest {
        +UUID manifest_id
        +UUID file_id
        +JSON chunks_json
        +Bytes file_key_encrypted
        +Bytes signature
        +JSON replicated_to
        +DateTime created_at
        +validarAssinatura() Boolean
        +replicar(node) void
    }

    class Chunk {
        +String chunk_id
        +Int chunk_index
        +Int size
        +DateTime created_at
        +verificarIntegridade() Boolean
    }

    class ChunkReplica {
        +String chunk_id
        +UUID node_id
        +DateTime verified_at
        +ReplicaStatus status
        +DateTime created_at
        +verificar() Boolean
    }

    class Vault {
        +UUID member_id
        +Bytes vault_data
        +String encryption_algorithm
        +JSON replicated_to
        +Boolean is_admin_vault
        +DateTime updated_at
        +desbloquear(senha) void
        +armazenarCredencial(key, value) void
        +replicar(node) void
    }

    class Alert {
        +UUID alert_id
        +AlertType type
        +String message
        +Severity severity
        +Boolean resolved
        +DateTime created_at
        +DateTime resolved_at
        +resolver() void
    }

    class Invite {
        +UUID invite_id
        +String email
        +Role role
        +String token
        +DateTime expires_at
        +UUID created_by
        +DateTime accepted_at
        +aceitar(nome) Member
        +expirado() Boolean
    }

    %% --- Enums ---
    class Role {
        <<enumeration>>
        admin
        member
        reader
    }

    class NodeType {
        <<enumeration>>
        local
        s3
        r2
        b2
        vps
    }

    class NodeStatus {
        <<enumeration>>
        online
        suspect
        lost
        draining
        disconnected
    }

    class MediaType {
        <<enumeration>>
        photo
        video
        document
    }

    class FileStatus {
        <<enumeration>>
        processing
        ready
        error
        corrupted
    }

    %% --- Relacionamentos ---
    Cluster "1" --> "*" Member : possui
    Cluster "1" --> "*" Node : gerencia
    Cluster "1" --> "*" File : contém
    Cluster "1" --> "*" Alert : gera
    Cluster "1" --> "*" Invite : possui
    Member "1" --> "1" Vault : protege credenciais
    Member "1" --> "*" Node : registra (owner)
    Member "1" --> "*" File : faz upload
    Member "1" --> "*" Invite : cria
    File "1" *-- "1" Manifest : descrito por
    File "1" *-- "1" Preview : visualizado por
    Manifest "*" --> "*" Chunk : referencia (dedup)
    Chunk "1" --> "3..*" ChunkReplica : replicado em
    Node "1" --> "*" ChunkReplica : armazena
